--- a/template/dianyingim/html/label/about.html
+++ b/template/dianyingim/html/label/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>关于我们 - 电影先生 DYMr.xyz</title>
-    <meta name="keywords" content="电影先生,dymr.xyz,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧" />
+    <title>关于我们 - 有间影院</title>
+    <meta name="keywords" content="有间影院,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧" />
     <meta name="description" content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看" />
     {include file="public/include"}
 </head>
@@ -16,13 +16,7 @@
             <h1 class="page-title">关于我们</h1>
             <div class="box">
                 <div class="article-content">
-                    <h2 id="url"><a href="#url">官方网址</a></h2>
-                    <p>
-                        <a href="javascript:;" target="_blank">http://DIANYINGxs.COM</a><br>
-                        <a href="javascript:;" target="_blank">http://IANYINGxs.COM</a><br>
-                        <a href="javascript:;" target="_blank">hhttp://IANYINGxs.COM</a><br>收藏本站网址，不迷路！</p><b>如果您认可电影先生，请分享给你的好友！</b>
-                    <hr>
-                    <h2>电影先生介绍</h2>
+                    <h2>有间影院介绍</h2>
                     <p>大片，高清正版免费在线观看！</p>
                     <h3>优势</h3>
                     <ul>
