--- a/template/dianyingim/html/label/help.html
+++ b/template/dianyingim/html/label/help.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>手机怎么投屏智能电视和电视盒子？ - 电影先生 DYMr.xyz</title>
-    <meta name="keywords" content="电影先生,dymr.xyz,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧" />
+    <title>手机怎么投屏智能电视和电视盒子？ - 有间影视</title>
+    <meta name="keywords" content="有间影院,dymr.xyz,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧" />
     <meta name="description" content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看" />
     {include file="public/include"}
 </head>
@@ -31,26 +31,26 @@
                     <h2 id="and"><a href="javascript:;">安卓手机如何投屏？</a></h2>
                     <h3 id="and-qq"><a href="javascript:;">安卓 QQ浏览器</a>&nbsp;<a href="javascript:;" target="_blank">[下载]</a></h3>
                     <p class="article-imglist"><img src="https://p.pstatp.com/origin/pgc-image/f8833ad639f74536a0e80994e7f7b815" width="280"></p>
-                    <p>打开夸克浏览器-&gt;打开电影先生-&gt;播放视频-&gt;选择·····右上角 … -&gt;投屏-&gt;等待搜寻出智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p><br><br>
+                    <p>打开夸克浏览器-&gt;打开有间影院-&gt;播放视频-&gt;选择·····右上角 … -&gt;投屏-&gt;等待搜寻出智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p><br><br>
                     <h3 id="and-kuake"><a href="javascript:;">安卓 夸克浏览器</a>&nbsp;<a href="javascript:;" target="_blank">[下载]</a></h3>
                     <p class="article-imglist"><img src="https://p.pstatp.com/origin/pgc-image/13c3d8071ef04afca04121707ae58240" width="280"></p>
-                    <p>安卓夸克浏览器-&gt;打开电影先生-&gt;开始播放-&gt;全屏-&gt;左下角投屏-&gt;等待搜寻到智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p><br><br>
+                    <p>安卓夸克浏览器-&gt;打开有间影院-&gt;开始播放-&gt;全屏-&gt;左下角投屏-&gt;等待搜寻到智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p><br><br>
                     <h3 id="and-uc"><a href="javascript:;">安卓 UC浏览器</a>&nbsp;<a href="javascript:;" target="_blank">[下载]</a></h3>
                     <p class="article-imglist"><img src="https://p.pstatp.com/origin/pgc-image/e0cbb26a5d4b4c629c14b3a1e551a68f" width="280"></p>
-                    <p>打开安卓UC浏览器-&gt;打开电影先生-&gt;开始播放-&gt;全屏-&gt;左下角投屏-&gt;等待搜寻到智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p>
+                    <p>打开安卓UC浏览器-&gt;打开有间影院-&gt;开始播放-&gt;全屏-&gt;左下角投屏-&gt;等待搜寻到智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p>
                     <hr>
                     <h2 id="ios"><a href="javascript:;">苹果iOS手机如何投屏？</a></h2>
                     <h3 id="ios-safari"><a href="javascript:;">iOS Safari浏览器</a></h3>
                     <p class="article-imglist"><img src="https://p.pstatp.com/origin/pgc-image/419ca2c2378445648ba2ba6ad75e3ea1" width="280"></p>
-                    <p>使用Safari浏览器，打开电影先生-&gt;开始播放-&gt;全屏-&gt;左下角投屏-&gt;等待搜寻到智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p><br><br>
+                    <p>使用Safari浏览器，打开有间影院-&gt;开始播放-&gt;全屏-&gt;左下角投屏-&gt;等待搜寻到智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p><br><br>
                     <h3 id="ios-qq"><a href="javascript:;">iOS QQ浏览器</a>&nbsp;<a href="javascript:;" target="_blank">[下载]</a></h3>
                     <p class="article-imglist"><img src="https://p.pstatp.com/origin/pgc-image/e3888d4760f046f6a2e143899284f558" width="280"></p>
-                    <p>打开QQ浏览器(会接管网页播放器)-&gt;打开电影先生-&gt;播放视频-&gt;选中投屏图标-&gt;等待搜寻出智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p><br><br>
+                    <p>打开QQ浏览器(会接管网页播放器)-&gt;打开有间影院-&gt;播放视频-&gt;选中投屏图标-&gt;等待搜寻出智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p><br><br>
                     <h3 id="ios-kuake"><a href="javascript:;">iOS 夸克浏览器</a>&nbsp;<a href="javascript:;" target="_blank">[下载]</a></h3>
                     <p class="article-imglist"><img src="https://p.pstatp.com/origin/pgc-image/abc468199f62401f8eb11743b8b3b091" width="280"></p>
-                    <p>打开夸克浏览器-&gt;打开电影先生-&gt;播放视频-&gt;选择·····右上角 … -&gt;投屏-&gt;等待搜寻出智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p>
+                    <p>打开夸克浏览器-&gt;打开有间影院-&gt;播放视频-&gt;选择·····右上角 … -&gt;投屏-&gt;等待搜寻出智能电视/电视盒子-&gt;选中，即可投屏。<br>需要让当前手机和电视/盒子连接同一WIFI网络，否则可能无法搜到电视设备。</p>
                     <hr>
-                    <h2>电影先生 DYMr.xyz</h2>
+                    <h2>有间影院 DYMr.xyz</h2>
                     <ul>
                         <li>
                             <a href="{:mac_url('label/about')}" target="_blank">关于我们</a>
