--- a/template/dianyingim/html/public/foot.html
+++ b/template/dianyingim/html/public/foot.html
@@ -1,6 +1,6 @@
 <footer id="footer" class="wrapper">
     <p class="sitemap"><img src="{$maccms.path_tpl}img/logo.png" height="10">
-        <a target="_blank" href="{:mac_url('label/about')}">关于</a><span class="space-line-bold"></span>
+        <!--<a target="_blank" href="{:mac_url('label/about')}">关于</a><span class="space-line-bold"></span>-->
         <a target="_blank" href="{:mac_url('rss/index')}">MAP</a><span class="space-line-bold"></span>
         <a target="_blank" href="{:mac_url('rss/index')}">RSS</a><span class="space-line-bold"></span>
         <a target="_blank" href="{:mac_url('rss/baidu')}">Baidu</a><span class="space-line-bold"></span>
